crates/fig-lexer/tests/snapshots/integration_tests__generics__where_compound_bounds.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: process
- LBracket
- Ident: T
- RBracket
- LParen
- Ident: val
- Colon
- Ident: T
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Where
- Newline
- Indent
- Ident: T
- Colon
- Ident: Display
- Plus
- Ident: Debug
- Plus
- Ident: Clone
- Newline
- Dedent
- Pass
- Newline
- Dedent
- Func
- Ident: sorted_insert
- LBracket
- Ident: T
- RBracket
- LParen
- Ident: slice
- Colon
- Star
- Mut
- LBracket
- Ident: T
- RBracket
- Comma
- Ident: val
- Colon
- Ident: T
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Where
- Newline
- Indent
- Ident: T
- Colon
- Ident: Ord
- Plus
- Ident: Copy
- Newline
- Dedent
- Pass
- Newline
- Dedent
